--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- stylesheeet -->
-  <link rel="stylesheet" href="C:\Users\cryst\Documents\GitHub\Tindog/styles1.css">
+  <link rel="stylesheet" href="C:\Users\cryst\Documents\GitHub\Tindog/styles.css">
 
 
   <!-- font awesome -->
