--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- stylesheeet -->
-  <link rel="stylesheet" href="C:\Users\cryst\Documents\GitHub\Tindog/styles.css">
+    <link rel="stylesheet" href="https://github.com/crystalkishore007/Tindog.github.io/blob/master/styles.css">
 
 
   <!-- font awesome -->
