--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- stylesheeet -->
-    <link rel="stylesheet" href="https://github.com/crystalkishore007/Tindog.github.io/blob/master/styles.css">
+   <!-- <link rel="stylesheet" href="https://github.com/crystalkishore007/Tindog.github.io/blob/master/styles.css">-->
 
 
   <!-- font awesome -->
@@ -26,6 +26,12 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
+  
+  <style>
+    body{
+      background-color:red;
+    }
+  </style>
 
 </head>
 
