--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ right: 30%;
   <!-- Press -->
 
   <section id="press">
-    <img class=press-img src="techCrunch.png" alt="tc-logo">
+    <img class=press-img src="TechCrunch.png" alt="tc-logo">
     <img class=press-img src="tnw.png" alt="tnw-logo">
     <img class=press-img src="bizinsider.png" alt="biz-insider-logo">
     <img class=press-img src="mashable.png" alt="mashable-logo">
