--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ right: 30%;
     </div>
     <div class="carousel-item">
 
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found th e love of their life. I think.</h2>
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="test-img" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
     </div>
@@ -427,7 +427,7 @@ right: 30%;
         <i class="social-icon fab fa-twitter"></i>
         <i class="social-icon fab fa-instagram"></i>
         <i class="social-icon fas fa-envelope"></i>
-        <p>© Copyright 2018 TinDog</p>
+        <p>© Copyright Crystal Kishore 2020</p>
       </div>
 
   </footer>
