--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
   <meta charset="utf-8">
-  <title>TinDog-CKCK</title>
+  <title>TinDog</title>
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
